# wikiGQextract

./: README.md  README.md~  wikiGQextract.cabal  wikiGQextract.cabal~  wikiGQextract_wk.lkshs  wikiGQextract_wk.lkshw
src/: Main.hi  Main.hs  intrebari.txt
